// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx default order 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      some shop
    </span>
    <span
      id="date"
    >
      1 мая, пт, 2020 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      item1
    </div>
    <div
      className="Order-item"
      key="1"
    >
      item1
    </div>
  </div>
</div>
`;

exports[`Order.tsx empty order 1`] = `""`;

exports[`Order.tsx no items order 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      some shop
    </span>
    <span
      id="date"
    >
      9 декабря, вс, 2018 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;
